add fakeroot package for sbt native packager